@@ -1,5 +1,5 @@
 <?php
-// $Id: admin.inc,v 1.154.2.46 2010-12-01 00:02:05 merlinofchaos Exp $
+// $Id: admin.inc,v 1.154.2.47 2010-12-10 00:39:21 merlinofchaos Exp $
 /**
  * @file admin.inc
  * Provides the Views' administrative interface.
@@ -602,6 +602,13 @@ function views_ui_add_form(&$form_state) {
     '#attributes' => array('dir'=>'ltr'),
   );
 
+  $form['human_name'] = array(
+    '#type' => 'textfield',
+    '#title' => t('Human readable name'),
+    '#description' => t('You can use a more descriptive name for this view here. Spaces are allowed'),
+    '#default_value' => $view ? $view->human_name : '',
+  );
+
   $form['description'] = array(
     '#type' => 'textfield',
     '#title' => t('View description'),
@@ -669,6 +676,7 @@ function views_ui_add_form_validate($form, &$form_state) {
 function views_ui_add_form_submit($form, &$form_state) {
   $view = $form_state['view'] ? $form_state['view'] : views_new_view();
   $view->name = $form_state['values']['name'];
+  $view->human_name = $form_state['values']['human_name'];
   $view->description = $form_state['values']['description'];
   $view->tag = $form_state['values']['tag'];
   if (empty($form['base_table']['#disabled'])) {
@@ -1144,15 +1152,28 @@ function template_preprocess_views_ui_edit_tab(&$vars) {
   $vars['title'] = check_plain($display->display_title);
   $vars['description'] = check_plain($plugin['help']);
 
-  // Special fields if tihs is the default display.
+  // Special fields if this is the default display.
   $vars['default'] = ($display->id == 'default');
   $vars['details_class'] = views_ui_item_css('details');
-  if (!empty($view->changed_sections['details'])) {
-    $vars['details_changed'] = TRUE;
+  
+  foreach (array('human_name', 'tag', 'description') as $property) {
+    if (!empty($view->changed_sections[$property])) {
+      $vars['details_changed'][$property] = TRUE;
+    }
+    switch ($property) {
+      case 'human_name':
+        $title = t('Human name');
+        break;
+      case 'tag':
+        $title = t('Tag');
+        break;
+      case 'description':
+        $title = t('Description');
+        break;
+    }
+    $value = empty($view->{$property}) ? t('None') : check_plain($view->{$property});
+    $vars['details'][$property] = $title . ': ' . l($value, "admin/build/views/nojs/$property/$view->name", array('attributes' => array('class' => 'views-ajax-link')));
   }
-
-  $tag = empty($view->tag) ? t('None') : $view->tag;
-  $vars['details'] = t('Description') . '/' . t('Tag') . ': ' . l($tag, "admin/build/views/nojs/details/$view->name", array('attributes' => array('class' => 'views-ajax-link')));
 
   // Calculate options from display plugin.
   $options = $categories = array();
@@ -2283,11 +2304,12 @@ function views_ui_reorder_displays_button(&$form_state, $view) {
 /**
  * Page callback to edit details of a view.
  */
-function views_ui_edit_details($js, $view) {
+function views_ui_edit_details($property, $js, $view) {
   views_include('ajax');
   $form_state = array(
     'view' => &$view,
     'ajax' => $js,
+    'property' => $property,
   );
 
   $output = views_ajax_form_wrapper('views_ui_edit_details_form', $form_state);
@@ -2312,20 +2334,35 @@ function views_ui_edit_details_form(&$form_state) {
   $form['#title'] = t('View details');
   $form['#section'] = 'details';
 
-  $form['description'] = array(
-    '#type' => 'textfield',
-    '#title' => t('View description'),
-    '#description' => t('This description will appear on the Views administrative UI to tell you what the view is about.'),
-    '#default_value' => $view->description,
-  );
-
-  $form['tag'] = array(
-    '#type' => 'textfield',
-    '#title' => t('View tag'),
-    '#description' => t('Enter an optional tag for this view; it is used only to help sort views on the administrative page.'),
-    '#default_value' => $view->tag,
-    '#autocomplete_path' => 'admin/views/ajax/autocomplete/tag',
-  );
+  switch ($form_state['property']) {
+    case 'human_name':
+      $form['human_name'] = array(
+        '#type' => 'textfield',
+        '#title' => t('Human readable name'),
+        '#description' => t('You can use a more descriptive name for this view here. Spaces are allowed'),
+        '#default_value' => $view->human_name,
+      );
+      break;
+    
+    case 'tag':
+      $form['tag'] = array(
+        '#type' => 'textfield',
+        '#title' => t('View tag'),
+        '#description' => t('Enter an optional tag for this view; it is used only to help sort views on the administrative page.'),
+        '#default_value' => $view->tag,
+        '#autocomplete_path' => 'admin/views/ajax/autocomplete/tag',
+      );
+      break;
+    
+    case 'description':
+      $form['description'] = array(
+        '#type' => 'textfield',
+        '#title' => t('View description'),
+        '#description' => t('This description will appear on the Views administrative UI to tell you what the view is about.'),
+        '#default_value' => $view->description,
+      );
+      break;
+  }
 
   views_ui_standard_form_buttons($form, $form_state, 'views_ui_edit_details_form');
   return $form;
@@ -2335,8 +2372,7 @@ function views_ui_edit_details_form(&$form_state) {
  * Submit handler for views_ui_edit_details_form
  */
 function views_ui_edit_details_form_submit($form, &$form_state) {
-  $form_state['view']->description = $form_state['values']['description'];
-  $form_state['view']->tag = $form_state['values']['tag'];
+  $form_state['view']->{$form_state['property']} = $form_state['values'][$form_state['property']];
   views_ui_cache_set($form_state['view']);
   $form_state['redirect'] = 'admin/build/views/edit/' . $form_state['view']->name;
 }
