@@ -1,5 +1,5 @@
 <?php
-// $Id: views-ui-edit-tab.tpl.php,v 1.11.2.2 2010-08-13 23:18:53 merlinofchaos Exp $
+// $Id: views-ui-edit-tab.tpl.php,v 1.11.2.3 2010-12-10 00:39:22 merlinofchaos Exp $
 /**
  * @file views-ui-edit-tab.tpl.php
  * Template for the primary view editing window.
@@ -33,9 +33,11 @@
         <div class="views-category">
           <div class="views-category-title"><?php print t('View settings'); ?></div>
           <div class="views-category-content">
-            <div class="<?php $details_class; if (!empty($details_changed)) { print ' changed'; }?>">
-              <?php print $details ?>
+          <?php foreach ($details as $name => $detail): ?>
+            <div class="<?php $details_class[$name]; if (!empty($details_changed[$name])) { print ' changed'; }?>">
+              <?php print $detail ?>
             </div>
+          <?php endforeach; ?>
           </div>
         </div>
       <?php endif; ?>
