@@ -1,5 +1,5 @@
 <?php
-// $Id: views.install,v 1.46.2.14 2010-11-18 01:06:56 merlinofchaos Exp $
+// $Id: views.install,v 1.46.2.15 2010-12-10 00:39:21 merlinofchaos Exp $
 /**
  * @file views.install
  * Contains install and update functions for Views.
@@ -490,4 +490,32 @@ function views_update_6011() {
   $ret[] = update_sql("UPDATE {blocks} SET cache = " . BLOCK_NO_CACHE . " WHERE module = 'views' AND delta LIKE '-exp-%'");
   
   return $ret;
+}
+
+
+/**
+ * Add a human readable name.
+ */
+function views_schema_6012() {
+  $schema = views_schema(__FUNCTION__);
+  $schema['views_view']['fields']['human_name'] = array(
+    'type' => 'varchar',
+    'length' => '255',
+    'default' => '',
+    'description' => 'A human readable name used to be displayed in the admin interface',
+  );
+  return $schema;
+}
+
+function views_update_6012() {
+  $ret = array();
+
+  $new_field = array(
+    'type' => 'varchar',
+    'length' => '255',
+    'default' => '',
+    'description' => 'A human readable name used to be displayed in the admin interface',
+  );
+
+  db_add_field($ret, 'views_view', 'human_name', $new_field);
 }
